WebRTC: RTCIceCandidate init dictionary don't handle explicit null or undefined values correctly https://bugs.webkit.org/show_bug.cgi?id=158873

Reviewed by Alejandro G. Castro.

Source/WebCore:

Prevent explicit null and undefined values from being converted to "null" and "undefined"
strings.

Test: Extended fast/mediastream/RTCIceCandidate.html

* Modules/mediastream/RTCIceCandidate.cpp:
(WebCore::RTCIceCandidate::create):

LayoutTests:

Updated test to verify that explicit null and undefined values, passed to the
RTCIceCandidate init dictionary, are handled correctly.

* fast/mediastream/RTCIceCandidate-expected.txt:
* fast/mediastream/RTCIceCandidate.html:


Canonical link: https://commits.webkit.org/177034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202267 268f45cc-cd09-0410-ab3c-d52691b4dbfc